<resources>
    <string name="app_name">THAI ECHO</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings2">Info</string>
    <string name="spelling_btn">ฝึกการออกเสียง</string>
    <string name="listening_btn">ฝึกการฟังพยัญชนะภาษาไทย</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_our_team">รายชื่อผู้พัฒนา</string>
    <string name="our_team_info">
        แอพพลิเคชั่นสอนการออกเสียงพยัญชนะภาษาไทย\nALPHABET ECHO\n\nจัดทำโดยกลุ่ม Think Big\n\n
    </string>
    <string name="team1">
    นายวีศรุต คุ้มวิไล \nรหัสนักศึกษา 55037153\n
    (ส่วนรับผิดชอบ :เขียนโปรแกรม )\n\n
    </string>
    <string name="team2">
    นายพัฒนพงษ์   เจริญรักษ์ปัญญา \nรหัสนักศึกษา 55017631\n
    (ส่วนรับผิดชอบ : ออกแบบ แนวคิด ไอเดีย)\n\n
    </string>
    <string name="team3">
        นางภัทรี ไชยชนันท \nรหัสนักศึกษา 55007682\n
    (ส่วนรับผิดชอบ :ตกแต่งแอพ หารูปภาพ)\n\n
    </string>
    <string name="team4">
        นายรัตนไชย ทองคำ \nรหัสนักศึกษา 55023724\n
    (ส่วนรับผิดชอบ :ตกแต่งแอพ แต่งภาพ)\n\n
    </string>
    <string name="info2">
        สาขาวิทยาการคอมพิวเตอร์และการพัฒนาแอพลิเคชั่น\nคณะเทคโนโลยีสารสนเทศและการสื่อสาร\nมหาวิทยาลัยศรีปทุม
    </string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="title_activity_first_main">FirstMainActivity</string>

    <string-array name="alphabet_th">
        <item>ก.ไก่</item>
        <item>ข.ไข่</item>
        <item>ฃ.ฃวด</item>
        <item>ค.ควาย</item>
        <item>ฅ.ฅน</item>
        <item>ฆ.ระฆัง</item>
        <item>ง.งู</item>
        <item>จ.จาน</item>
        <item>ฉ.ฉิ่ง</item>
        <item>ช.ช้าง</item>
        <item>ซ.โซ่</item>
        <item>ณ.กะเฌอ</item>
        <item>ญ.หญิง</item>
        <item>ฎ.ชฎา</item>
        <item>ฏ.ปฏัก</item>
        <item>ฐ.ฐาน</item>
        <item>ฑ.นางมณโฑ</item>
        <item>ฒ.ผู้เฒ่า</item>
        <item>ณ.เณร</item>
        <item>ด.เด็ก</item>
        <item>ต.เต่า</item>
        <item>ถ.ถุง</item>
        <item>ท.ทหาร</item>
        <item>ธ.ธง</item>
        <item>น.หนู</item>
        <item>บ.ใบไม้</item>
        <item>ป.ปลา</item>
        <item>ผ.ผึ้ง</item>
        <item>ฝ.ฝา</item>
        <item>พ.พาน</item>
        <item>ฟ.ฟัน</item>
        <item>ภ.สำเภา</item>
        <item>ม.ม้า</item>
        <item>ย.ยักษ์</item>
        <item>ร.เรือ</item>
        <item>ล.ลิง</item>
        <item>ว.แหวน</item>
        <item>ศ.ศาลา</item>
        <item>ษ.ฤาษี</item>
        <item>ส.เสือ</item>
        <item>ห.หีบ</item>
        <item>ฬ.จุฬา</item>
        <item>อ.อ่าง</item>
        <item>ฮ.นกฮูก</item>
    </string-array>

    <string-array name="alphabet_th_speak">
        <item>กอ ไก่</item>
        <item>ขอ ไข่</item>
        <item>ฃอ ฃวด</item>
        <item>คอ ควาย</item>
        <item>ฅอ ฅน</item>
        <item>ฆอ ระฆัง</item>
        <item>งอ งู</item>
        <item>จอ จาน</item>
        <item>ฉอ ฉิ่ง</item>
        <item>ชอ ช้าง</item>
        <item>ซอ โซ่</item>
        <item>ณอ กะเฌอ</item>
        <item>ญอ หญิง</item>
        <item>ฎอ ชฎา</item>
        <item>ฏอ ปฏัก</item>
        <item>ฐอ ฐาน</item>
        <item>ฑอ นางมณโฑ</item>
        <item>ฒอ ผู้เฒ่า</item>
        <item>ณอ เณร</item>
        <item>ดอ เด็ก</item>
        <item>ตอ เต่า</item>
        <item>ถอ ถุง</item>
        <item>ทอ ทหาร</item>
        <item>ธอ ธง</item>
        <item>นอ หนู</item>
        <item>บอ ใบไม้</item>
        <item>ปอ ปลา</item>
        <item>ผอ ผึ้ง</item>
        <item>ฝอ ฝา</item>
        <item>พอ พาน</item>
        <item>ฟอ ฟัน</item>
        <item>ภอ สำเภา</item>
        <item>มอ ม้า</item>
        <item>ยอ ยักษ์</item>
        <item>รอ เรือ</item>
        <item>ลอ ลิง</item>
        <item>วอ แหวน</item>
        <item>ศอ ศาลา</item>
        <item>ษอ ฤาษี</item>
        <item>สอ เสือ</item>
        <item>หอ หีบ</item>
        <item>ฬอ จุฬา</item>
        <item>ออ อ่าง</item>
        <item>ฮอ นกฮูก</item>
    </string-array>
    <string-array name="alphabet_th_speak2">
        <item>กอไก่</item>
        <item>ขอไข่</item>
        <item>ฃอฃวด</item>
        <item>คอควาย</item>
        <item>ฅอฅน</item>
        <item>ฆอระฆัง</item>
        <item>งองู</item>
        <item>จอจาน</item>
        <item>ฉอฉิ่ง</item>
        <item>ชอช้าง</item>
        <item>ซอโซ่</item>
        <item>ณอกะเฌอ</item>
        <item>ญอหญิง</item>
        <item>ฎอชฎา</item>
        <item>ฏอปฏัก</item>
        <item>ฐอฐาน</item>
        <item>ฑอนางมณโฑ</item>
        <item>ฒอผู้เฒ่า</item>
        <item>ณอเณร</item>
        <item>ดอเด็ก</item>
        <item>ตอเต่า</item>
        <item>ถอถุง</item>
        <item>ทอทหาร</item>
        <item>ธอธง</item>
        <item>นอหนู</item>
        <item>บอใบไม้</item>
        <item>ปอปลา</item>
        <item>ผอผึ้ง</item>
        <item>ฝอฝา</item>
        <item>พอพาน</item>
        <item>ฟอฟัน</item>
        <item>ภอสำเภา</item>
        <item>มอม้า</item>
        <item>ยอยักษ์</item>
        <item>รอเรือ</item>
        <item>ลอลิง</item>
        <item>วอแหวน</item>
        <item>ศอศาลา</item>
        <item>ษอฤาษี</item>
        <item>สอเสือ</item>
        <item>หอหีบ</item>
        <item>ฬอจุฬา</item>
        <item>อออ่าง</item>
        <item>ฮอนกฮูก</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_set_name">SetNameActivity</string>
</resources>
